add build and install stuff to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
 build/
 install/
 log/
+build/nervous_enums/*.*
+build/nervous_enums/colcon_command_prefix_setup_py.sh.env
+build/nervous_enums/colcon_command_prefix_setup_py.sh.env
+build/nervous_enums/package.xml
+build/nervous_enums/setup.cfg
+build/nervous_enums/colcon_command_prefix_setup_py.sh.env
+build/nervous_enums/nervous_enums
+build/nervous_enums/package.xml
+build/nervous_enums/setup.cfg
+build/nervous_enums/setup.py
+build/nervous_enums/prefix_override/sitecustomize.py
+build/nervous_enums/prefix_override/__pycache__/sitecustomize.cpython-312.pyc
+build/nervous_enums/resource/nervous_enums
+build/nervous_enums/share/nervous_enums/hook/pythonpath_develop.dsv
+build/nervous_enums/share/nervous_enums/hook/pythonpath_develop.ps1
+build/nervous_enums/share/nervous_enums/hook/pythonpath_develop.sh
+install/local_setup.sh
+install/setup.bash
+install/setup.ps1
+install/setup.sh
+install/setup.zsh
+install/nervous_enums/lib/python3.12/site-packages/nervous-enums.egg-link
+install/nervous_enums/share/ament_index/resource_index/packages/nervous_enums
+install/nervous_enums/share/nervous_enums/package.sh
+install/nervous_enums/share/nervous_enums/package.xml
+log/latest_build
